# TokenFlow

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  dev.bat  eslint.config.ts  index.html  package-lock.json  package.json  release.bat  run-release.bat  vite.config.ts
docs/: TokenFlow UI工作流.md  TokenFlow UI设计方案.md  TokenFlow 下一阶段架构方案.md  TokenFlow 平台原生额度架构方案书.md  竞品研究与设计文档.md
scripts/: release-macos-github.sh  release-macos-mas.sh  setup-updater-signing.sh  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.github.conf.json  tauri.mas.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_icon.rs
src-tauri/src/browser/: cookies.rs  detection.rs  mod.rs
src-tauri/src/commands/: accounts.rs  anthropic.rs  antigravity.rs  claude.rs  copilot.rs  cursor.rs  gemini.rs  iflow.rs  kimi.rs  mod.rs  openai.rs  openai_oauth.rs  qwen.rs  system.rs  trae.rs  tray.rs  usage.rs  vertex.rs
src-tauri/src/core/: account_store.rs  accounts.rs  cost_pricing.rs  credentials.rs  debug_log.rs  jsonl_scanner.rs  mod.rs  provider.rs  rate_window.rs  usage_snapshot.rs
src-tauri/src/platform/: cookies.rs  credentials.rs  mod.rs  paths.rs  updater.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/amp/: mod.rs
src-tauri/src/providers/antigravity/: mod.rs
src-tauri/src/providers/augment/: mod.rs
src-tauri/src/providers/claude/: mod.rs  oauth.rs
src-tauri/src/providers/codex/: api.rs  mod.rs
src-tauri/src/providers/cursor/: api.rs  local.rs  mod.rs
src-tauri/src/providers/factory/: mod.rs
src-tauri/src/providers/gemini/: api.rs  mod.rs
src-tauri/src/providers/iflow/: mod.rs
src-tauri/src/providers/kimi/: mod.rs
src-tauri/src/providers/kiro/: mod.rs  version.rs
src-tauri/src/providers/minimax/: local_storage.rs  mod.rs
src-tauri/src/providers/opencode/: mod.rs
src-tauri/src/providers/qwen/: mod.rs
src-tauri/src/providers/synthetic/: mod.rs
src-tauri/src/providers/trae/: mod.rs
src-tauri/src/providers/vertexai/: mod.rs
src-tauri/src/providers/warp/: mod.rs
src-tauri/src/tracking/: gateway.rs  local_logs.rs  mod.rs  provider_reported_summary.rs  provider_reports.rs  status.rs  types.rs
(+65 files in other folders)
