[package]
name = "tokenflow"
version = "0.1.4"
description = "Windows desktop dashboard for AI coding accounts, token usage, and provider-native quota windows"
authors = ["Howard Dong"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tokenflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls-native-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
regex-lite = "0.1"
which = "7"
open = "5"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["windows-native"] }
url = "2"
jsonwebtoken = "9"

# Image processing for dynamic tray icons
image = { version = "0.25", default-features = false, features = ["png"] }

# SQLite for browser cookie reading (Firefox)
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption for cookie decryption (Chrome/Edge DPAPI + AES-GCM)
aes-gcm = "0.10"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
